# quant_DFFC

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: dffc_app.py
app/_utils/: code_crawl.py  fetch_all_funds.py  fund_meta.csv  stock_meta.csv
app/data/: asset_lists.json
app/data/fund_parameters/: 002963.json  004253.json  007280.json  007467.json  008299.json  010365.json  013360.json  015016.json  017437.json  161815.json  270042.json  501029.json
app/pages/: 1_data.py  1_monitor.py  2_holt_winters.py  2_optimizer.py
dffc/: __init__.py  estimate_utils.py  fund_data.py  stock_data.py
dffc/backtesting/: __init__.py  base.py
dffc/data_provider/: __init__.py  base.py  eastmoney_provider.py  fund_est_val_crawler.py
dffc/holt_winters/: __init__.py  _holt_winters.py  _optimization.py
dffc/strategies/: base.py
wxy_backtest/: hw_op.ipynb
wxy_backtest/hw_dual_reallocation_LR/: backtest.ipynb  strategy.py
